--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
                     <img src="assets/img/white.png" alt="Xenius" border="0" style="height: 91px;">
                 </div>
                 <div class="col-6">
-                    <div class="row" style="margin-top:8%">
+                    <div class="row topHeader">
                         <div _ngcontent-kme-c2="" class="col-2 offset-2">
                             <p _ngcontent-kme-c2="" class="first" style="
                                     font-size: 42px;
