--- a/src/app/supplyweekly-report/supplyweekly-report.component.scss
+++ b/src/app/supplyweekly-report/supplyweekly-report.component.scss
@@ -1,3 +1,24 @@
+mat-form-field{
+  width: 100%;
+}
+p {
+  font-family: Lato;
+}
+
+.speed-dial-container {
+  position: absolute;
+  right: 15px;
+}
+
+.speed-dial-container.top {
+  top: 15px;
+}
+
+.speed-dial-container.bottom {
+  bottom: 15px;
+}
+
+
 @keyframes swing {
     0% {
       transform: rotate(0deg);
@@ -652,4 +673,34 @@
     color: white !important;
   } }
  
+}
+table{
+  table-layout: fixed;
+
+  border-collapse: collapse;
+border-spacing: 0;
+.secondHeader{
+  border-bottom: 2px solid #000;
+  color: #035484;
+}
+width: 100%;
+border: 1px solid #e4e0e0;
+a{
+cursor: pointer;
+}
+
+th,td {
+  border-style: solid;
+  border-width: 5px;
+  border-color: #BCBCBC;
+}
+th{
+  padding:8px;
+  border: 1px solid #e4e0e0;
+}
+td{
+  border: 1px solid #e4e0e0;
+  padding:5px;
+align-items: left;
+}
 }
