--- a/src/app/supplyweekly-report/supplyweekly-report.component.html
+++ b/src/app/supplyweekly-report/supplyweekly-report.component.html
@@ -124,7 +124,7 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="background: #f0eff7 ;" *ngIf="authForm.valid">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="background: #f0eff7 ;" *ngIf="authForm.valid && displayList.length > 0">
             <div class="row">
               <div class="col-12 col-sm-12 col-md-12 col-xl-12 col-lg-12 ">
                 <span style="color: #616060"> <strong> {{reportTitle}} </strong></span>
