--- a/src/app/supplyweekly-report/supplyweekly-report.component.scss
+++ b/src/app/supplyweekly-report/supplyweekly-report.component.scss
@@ -704,3 +704,12 @@ td{
 align-items: left;
 }
 }
+.mat-progress-spinner{
+  margin-top: 100px;
+  opacity: 0.7;
+  margin: auto
+  //  z-index: 9999;
+  // right: 49%;
+  // top: 10%;
+
+}
