--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -117,7 +117,7 @@
                     float: right;
                 ">
                         <div class ="col-6 offset-6">
-                            <span style="color: white;font-size: 13px;"><strong>Aug 2019 - 4:00 pm</strong> </span>
+                            <span style="color: white;font-size: 13px;"><strong>{{dateHeader | date}}</strong> </span>
                         </div>
 </div>
 <div class ="row " style="float:right ;z-index: 9999;">
