--- a/src/app/supply-report/supply-report.component.html
+++ b/src/app/supply-report/supply-report.component.html
@@ -40,7 +40,7 @@
                             <mat-option value="EODB">EODB</mat-option>
                             <mat-option value="IPDS">IPDS</mat-option>
                             <mat-option value="NTPF">NTPF</mat-option>
-                            <mat-option value="16NN">16 NN</mat-option>
+                            <mat-option value="16nn">16 NN</mat-option>
                             <mat-option value="152-R-APDRP">152-R-APDRP</mat-option>
 
 
