--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -640,6 +640,7 @@
   }
 
 }
+
 .activeonHver {
   &:hover{ .card {
     p{
@@ -653,4 +654,25 @@
     color: white !important;
   } }
  
+}
+
+.detailKey{
+  padding-left: 0;
+
+  div{
+      margin-bottom: 5px;
+
+      padding:5px;
+       border:1px solid rgba(0,0,0,0.3);
+      font-size: 12px;
+  }
+}
+.detailheader{
+  padding-left: 0;
+  div{
+      margin-bottom: 5px;
+       padding:5px;
+      
+      font-size: 12px;
+  } 
 }
