--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -99,7 +99,10 @@ span.login-checkbox {
     /* margin: 10px; */
     margin: 13px 10px 10px 4px;
  }
-
+ .buttonload {
+    margin: 13px 10px 10px 4px;
+	font-size: 16px /* Set a font size */
+  }
 /** Text Under Box**/
 .login-extra {
 	display: block; 
